--- a/src/Pages/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard.css
@@ -10,9 +10,10 @@
     height: 70px;
     background-color: #1266F1;
     color: #fff;
+    /* border-right: 1px solid black; */
 }
 .profile{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     height: 80px;
     padding: 10px 20px;
     background-color: #242B2E;
@@ -32,4 +33,10 @@
     top: -15px;
     left: -14px;
     font-weight: 600;
+}
+.handler{
+    width: 100%;
+    height: 76vh;
+    background-color: #242B2E;
+    opacity: 0.85;
 }
