--- a/src/Pages/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard.css
@@ -39,4 +39,16 @@
     height: 76vh;
     background-color: #242B2E;
     opacity: 0.85;
+    margin: 0;
+    padding: 0;
+    padding-top: 20px;
+}
+.handler .first{
+    width: 100%;
+    height: 40px;
+    
+    /* border-bottom: 1px solid #fff; */
+    color: #fff;
+    text-align: left;
+    padding: 10px 30px;
 }
