--- a/src/Pages/Dashboard/Components/StatusBar/StatusBar.css
+++ b/src/Pages/Dashboard/Components/StatusBar/StatusBar.css
@@ -1,20 +1,29 @@
-.card{
-    height: 200px;
+.card {
+    height: 120px;
     color: #fff;
+    -webkit-box-shadow: 0px 4px 39px -25px rgba(0, 0, 0, 1);
+    -moz-box-shadow: 0px 4px 39px -25px rgba(0, 0, 0, 1);
+    box-shadow: 0px 4px 39px -25px rgba(0, 0, 0, 1);
+    border: none;
 }
-.card h3{
-    font-weight:650;
+
+.card h3 {
+    font-weight: 650;
 }
-.card h1{
+
+.card h1 {
     text-align: left;
     padding-left: 40px;
     font-weight: 700;
     position: relative;
-    top: -30px;
-    
+
+
 }
-.card img{
+
+.card img {
     position: relative;
-    top: 0;
-    left: 60px;
+    top: -8px;
+    left: 10px;
+    opacity: 0.7;
+
 }
