--- a/src/Pages/LoginSystem/Login.css
+++ b/src/Pages/LoginSystem/Login.css
@@ -15,6 +15,10 @@
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2)
    
 }
+.form-main h1{
+    font-weight: 700;
+    opacity: 0.8;
+}
 .button1 button{
     padding: 7px 30px;
     font-weight: 600;
